# rubberducky

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  event.rs  main.rs  ui.rs
src/components/: message.rs
src/constants/: symbols.rs
src/widgets/: footer.rs  message.rs  mod.rs  title.rs
